# concept-alignment

./: .gitignore  .gitmodules  ArgvParse.hs  ConceptAlignment.hs  CoursePlansPrepoc.hs  Criteria.hs  EvAlign.hs  Eval.hs  ExtractConcepts.hs  FastAlignUtils.hs  FunctionAlign.hs  GenerateGrammar.hs  LICENSE  PreprocessUtils.hs  PropagateConcepts.hs  README.md  Translate.hs  ca.cabal  concept-alignment.cabal  stack.yaml  testone2.txt
baseline/: AlignTrees.hs  GetConfig.hs  TreeConv.hs  Utils.hs  ca.cabal  stack.yaml
data/MT_eval/: en_CSE.txt  en_DMI.txt
data/MT_eval/it_DMI/: auto.txt  human_eval.txt
data/MT_eval/it_DMI/reference/: C_postprocessing.txt
data/MT_eval/sv_CSE/: auto.txt  human_eval.txt
data/MT_eval/sv_CSE/reference/: H_postprocessing.txt
data/course_plans/: CSE_en.conllu  CSE_en.txt  CSE_sv.conllu  CSE_sv.txt  DMI_en.conllu  DMI_en.txt  DMI_it.conllu  DMI_it.txt
final_report/: Main.tex  references.bib
final_report/figure/: active_katia.tex  alignment.graphml  clauses.conllu  compiler.nomnoml  deptree.conllu  deptree.tex  elems.nomnoml  en_rico.conllu  en_rico.tex  fa.conllu  fa.tex  katia1.conllu  katia1.tex  katia2.conllu  katia3.conllu  katia4.conllu  katia4.tex  palignment_en.tex  palignment_it.tex  parsetree.eps  passive_katia.conllu  salignment_en.conllu  salignment_en.tex  scen1.nomnoml  scen2.nomnoml
final_report/include/: CAMT.tex  CE.tex  CP.tex  Conclusions.tex  Introduction.tex  TT.tex
final_report/include/backmatter/: Appendix_1.tex  Appendix_2.tex  Appendix_3.tex
final_report/include/frontmatter/: Abstract.tex  Acknowledgements.tex  Titlepage.tex
final_report/pseudocode/: BaselineB.hs  BasicTypes.hs  Propagate.hs  Utils.hs
grammars/: CSE.gf  CSEEng.gf  CSESwe.gf  CoursePlansSyn.gf  CoursePlansSynEng.gf  CoursePlansSynIta.gf  CoursePlansSynSwe.gf  DMI.gf  DMIEng.gf  DMIIta.gf  Extract.gf  Extract.labels  ExtractEng.labels  ExtractSwe.gf  ExtractSwe.labels  Extracted.gf  ExtractedEng.gf  ExtractedGU.gf  ExtractedGUEng.gf  ExtractedGUSwe.gf  ExtractedPG.gf  ExtractedPGEng.gf  ExtractedPGIta.gf  ExtractedSwe.gf  README.md
paper/: custom.bib  paper.tex  struct.md
paper/figures/: en.conllu  en.rconllu  en.sconllu  en.tex  it.conllu  it.rconllu  it.sconllu  it.tex  overview.nomnoml
paper/slides/: beamerthememhthm.sty  presentation.md
patterns/: nouns.hst  np.hst  vp.hst  vp_prune.hst  vp_replace.hst
presentation/: presentation.md
summer-school/: beamerthememhthm.sty  presentation.md
summer-school/figures/: full_overview.nomnoml  high-level_overview.nomnoml
thesis/final_report/: Main.tex
thesis/final_report/figure/: active_katia.conllu  clauses.tex  different.tex  it_rico.conllu  it_rico.tex  katia2.tex  katia3.tex  normalization.conllu  normalization2.conllu  palignment_en.conllu  palignment_it.conllu  parsetree.ps  passive_katia.tex  perfect_alignment_en.conllu  perfect_alignment_it.conllu  perfect_alignment_it.tex  rest_en.conllu  rest_en.tex  rest_it.conllu  rest_it.tex
thesis/final_report/include/: CAMT.tex  CE.tex  CP.tex  Conclusions.tex  Introduction.tex  TT.tex
thesis/final_report/include/backmatter/: Appendix_1.tex  References.tex
thesis/final_report/include/frontmatter/: Abstract.tex  Acknowledgements.tex
thesis/final_report/include/settings/: Settings.tex
thesis/final_report/pseudocode/: BaselineA.hs  BasicTypes.hs  Extract.hs
thesis/planning_report/: planning_report.tex  references.bib
thesis/presentation/: beamerthememhthm.sty  presentation.md
thesis/thesis_proposal/: proposal.tex
thesis_proposal/: references.bib
