name: concept-alignment
version: 0
author: Arianna Masciolini
maintainer: arianna.masciolini@gmail.com
category: Language
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10

executable extract-concepts
  main-is: ExtractConcepts.hs
  other-modules:
    ConceptAlignment,
    Criteria,
    FastAlignUtils,
    ArgvParse
  build-depends:
    base,
    containers,
    gf,
    gf-ud,
    multiset,
    split,
    filepath
  ghc-options: -main-is ExtractConcepts
  default-language: Haskell2010

executable propagate-concepts
  main-is: PropagateConcepts.hs
  other-modules:
    ConceptAlignment,
    Criteria,
    ArgvParse
  build-depends: 
    base,
    containers,
    gf,
    gf-ud,
    multiset,
    split,
    filepath
  ghc-options: -main-is PropagateConcepts
  default-language: Haskell2010

executable evalign
  main-is: EvAlign.hs
  other-modules:
    ConceptAlignment,
    Criteria,
    ArgvParse
  build-depends:
    base,
    containers,
    gf,
    gf-ud,
    multiset,
    split,
    filepath
  ghc-options: -main-is EvAlign
  default-language: Haskell2010

executable translate
  main-is: Translate.hs
  build-depends:
    base,
    gf
  ghc-options: -main-is Translate
  default-language: Haskell2010

executable generate-grammar
  main-is: GenerateGrammar.hs
  build-depends:
    base,
    gf,
    gf-ud,
    filepath,
    containers,
    process,
    pretty
  ghc-options: -main-is GenerateGrammar
  default-language: Haskell2010

library
  exposed-modules: ConceptAlignment
  build-depends:
    base,
    containers,
    gf,
    gf-ud,
    multiset,
    split,
    filepath
  ghc-options: -main-is EvAlign
  default-language: Haskell2010
